# hydra-inference

./: AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
configs/: cluster.yaml
docs/: quickstart.md
hydra/: __init__.py  cli.py  config.py  coordinator.py  proxy.py
scripts/: benchmark.sh  benchmark_families.py  benchmark_openrouter.py  install-coordinator.sh  install-worker.sh
tests/: test_config.py  test_coordinator.py  test_init_wizard.py  test_proxy.py  test_speculation.py  test_swarm.py
tightwad/: __init__.py  cli.py  config.py  coordinator.py  doctor.py  gguf_reader.py  init_wizard.py  loader.py  proxy.py  swarm_transfer.py
